# Tech-challenge-step-1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.MD
.github/workflows/: workflow.yml
data/: __init__.py
docker/: .env_example  Dockerfile.api  Dockerfile.jupyter  docker-compose.yml
docker/fastapi-app/: dockerfile  requirements.txt
docker/jupyter/: dockerfile  requirements.txt
docker/lambda-api/: Dockerfile
docker/mlflow/: requirements.txt
docs/: commit_pattern.MD  data_product_canvas.html  model_card.md
models/: __init__.py
notebooks/: __init__.py
src/: config.py
src/api/: main.py  model.py  schemas.py
src/docs/: rule_pr.MD
src/models/: mlp.py
src/notebooks/: demo.ipynb  eda.ipynb  etapa2_experimentos.ipynb
src/routers/: predict.py
src/service/: mlflow_service.py
tests/: __init__.py  test_config.py  test_smoke.py
