[project]
name = "tech-challenge"
version = "0.1.0"
description = "Projeto de Machine Learning de previsão de churn para o Tech Challenge"
readme = "README.md"
authors = [
    {name = "Patrick-Covre",    email = "p.covredev@gmail.com"},
    {name = "Beatriz-Ferrante", email = "beatriz.ferrante37@gmail.com"},
    {name = "Cecilia-Rocha",    email = "ceciliasdrochedo@gmail.com"},
    {name = "Jose-Daniel",    email = "dni.lacerda@yahoo.com.br"},
    {name = "josefcaique",    email = "jcaique10@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.18.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
ipykernel = ">=6.0.0"
mypy = "*"
pre-commit = ">=4.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PD",  # pandas-vet
    "NPY",
]
ignore = ["E501", "NPY002", "PD003"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "I001", "E401", "B008", "F401", "B905", "PD011", "PD002", "F541"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
